Optimize the task edit and details page